k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-issue-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-issue-test
  template:
    metadata:
      labels:
        app: proxy-issue-test
    spec:
      containers:
      - name: proxy-issue-test
        image: ${CONTAINER_REGISTRY}/${CONTAINER_REPOSITORY}:${BUILD_BUILDID}
        resources:
          requests:
            cpu: 125m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-issue-test
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: proxy-issue-test
