ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: some-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/subpath"
spec:
  tls:
  - hosts:
    - ${HOST}
    secretName: tls-secret
  rules:
  - host: ${HOST}
    http:
      paths:
      - backend:
          serviceName: proxy-issue-test
          servicePort: 80
        path: /subpath(/|$)(.*)
